primer intento de conexion a apache kafka
